--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.26",
+    "typescript": "^5.4.2"
   }
 }
