--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.12",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
