--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ontap_node",
+  "name": "digital-ecommerce-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
